fix canvas border overlapping chat border

--- a/resources/assets/css/components/overlay.less
+++ b/resources/assets/css/components/overlay.less
@@ -48,6 +48,9 @@
       background: @gray_dark; // just lessens contrast slightly
       transition-duration: @speed_slow;
     }
+    .app-canvas {
+      box-shadow: 0 1px @gray_lightest inset;
+    }
     .app-hud {
       opacity: 0;
       transition: 0;
